Fix "wrap tags" to target tumblr's new tag class

--- a/core/dashboardTweaks/wrapTags.css
+++ b/core/dashboardTweaks/wrapTags.css
@@ -21,16 +21,16 @@
  * along with 'Missing e'. If not, see <http://www.gnu.org/licenses/>.
  */
 
-#posts .post .footer_links.with_tags {
+#posts .post .post_footer_links.with_tags {
 overflow:visible !important;
 }
 
-#posts .post .footer_links.with_tags span {
+#posts .post .post_footer_links.with_tags span {
 display:inline !important;
 overflow:visible !important;
 }
 
-#posts .post .footer_links.with_tags .source_url {
+#posts .post .post_footer_links.with_tags .source_url {
 display:inline-block !important;
 overflow:hidden !important;
 }
@@ -44,6 +44,6 @@ height:auto !important;
 display:inline-block !important;
 }
 
-#posts .post .footer_links .tags {
+#posts .post .post_footer_links .tags {
 line-height:12px !important;
 }
